adding repository information to package.json

--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "moment": "~2.10.2",
     "angular-material": "~1.0.6"
   },
+  "repository": {
+    "type": "git",
+    "url": "https: //github.com/amittkSharma/extended-datetimepicker"
+  },
   "author": "Amitt K Sharma",
   "license": "MIT"
 }
