--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "extended-datetimepicker",
   "version": "0.1.0",
   "description": "Basic date time picker with ability to disable set of continuous or non-continuous date sets.",
+  "homepage": "http://rawgit.com/amittkSharma/extended-datetimepicker/master/index.html",
   "main": "js/angular-material-datetimepicker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
