--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extended-datetimepicker",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Basic date time picker with ability to disable set of continuous or non-continuous date sets.",
   "homepage": "http://rawgit.com/amittkSharma/extended-datetimepicker/master/index.html",
   "main": "js/angular-material-datetimepicker.js",
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "moment": "~2.10.2",
-    "angular-material": "~1.0.6"
+    "angular-material": "1.1.4"
   },
   "repository": {
     "type": "git",
